# EmbedDSP

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ideas.md
.github/workflows/: ci.yml  release.yaml
include/embeddsp/: fir.h  iir.h
src/: fir.c  iir.c
test/: CMakeLists.txt  test_fir.c  test_iir.c  test_runner.c
